sass/style.scss
@import "compass/css3/images";
@import "compass/support";
//Less CSS = Better
$legacy-support-for-ie: false;
$support-for-original-webkit-gradients: false;

/* HTML5 Boilerplate  */

article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
audio:not([controls]) { display: none; }
[hidden] { display: none; }

html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
html, button, input, select, textarea { font-family: sans-serif; color: #222; }
body { margin: 0; font-size: 1em; line-height: 1.4; }

::-moz-selection { background: transparent;  }
::selection { background: transparent;  }

a { color: #00e; }
a:visited { color: #551a8b; }
a:hover { color: #06e; }
a:focus { outline: thin dotted; }
a:hover, a:active { outline: 0; }
abbr[title] { border-bottom: 1px dotted; }
b, strong { font-weight: bold; }
blockquote { margin: 1em 40px; }
dfn { font-style: italic; }
hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
ins { background: #ff9; color: #000; text-decoration: none; }
mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }

q { quotes: none; }
q:before, q:after { content: ""; content: none; }
small { font-size: 85%; }
sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }

ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
dd { margin: 0 0 0 40px; }
nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }

img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
svg:not(:root) { overflow: hidden; }
figure { margin: 0; }

form { margin: 0; }
fieldset { border: 0; margin: 0; padding: 0; }

label { cursor: pointer; }
legend { border: 0; *margin-left: -7px; padding: 0; white-space: normal; }
button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
button, input { line-height: normal; }
button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; *overflow: visible; }
button[disabled], input[disabled] { cursor: default; }
input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; *width: 13px; *height: 13px; }
input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button { -webkit-appearance: none; }
button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
textarea { overflow: auto; vertical-align: top; resize: vertical; }
input:valid, textarea:valid {  }
input:invalid, textarea:invalid { background-color: #f0dddd; }

table { border-collapse: collapse; border-spacing: 0; }
td { vertical-align: top; }

.chromeframe { margin: 0.2em 0; background: #ccc; color: black; padding: 0.2em 0; }

html, body {
	height: 100%;
	width: 100%;
}

#content {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	overflow: hidden;
}

#sidebar {
	height: 100%;
	position: absolute;
	z-index: 1;
	box-sizing: border-box;
	min-width: 115px;
	width: 200px;
	max-width: 500px;

	#smartlists h2 {
		border-top: 0;
	}
	
	h2 {
		margin: 0;
		padding: 5px 15px 5px 15px;
		font-size: 13px;
		text-transform: uppercase;
		border-top: 1px solid #000;
		border-bottom: 1px solid #000;

		button {
			background: transparent;
			float: right;
			border-top: 1px solid transparent;
			border-bottom: 1px solid transparent;
			border-left: 0;
			border-right: 0;
			padding: 0;
			font-weight: bold;
		}
	}
	
	ul {
		margin: 0;
		padding: 0;
		li {
			display: box;
			display: -webkit-box;
			display: -moz-box;
			height: 30px;
			box-sizing: border-box;
			line-height: 30px;
			font-weight: normal;
			font-size: 13px;
			color: #444444;
			padding: 0 0 0 15px;
			cursor: pointer;
			position: relative;

			// jQuery UI tries to override
			width: 100% !important;

			.count {
				display: inline-block;
				width: 50px;
				height: 32px;
				text-align: center;
			}

			.name {
				display: block;
				height: 32px;
				box-flex: 1;
				-webkit-box-flex: 1;
				-moz-box-flex: 1;
			}

			input {
				display: block;
				height: 32px;
				background: #fff;
				padding: 0;
				margin: 0 0 0 -1px;
				border: 0;
				outline: 1px solid #000;
				box-flex: 1;
				-webkit-box-flex: 1;
				-moz-box-flex: 1;
			}
			input:focus {
				outline: 1px solid #000;
				outline-offset: 0;
			}
			
			&.selected {
				background: #eee;
				outline: 1px solid #000;
			}
			
			&.dragHover {
				background: #ccc;
			}
			
			// Temporary
			.delete,
			.edit {
				display: none;
			}
		}
	}
}

#lists {
	li.selected:hover {
				.delete,
				.edit {
					display: block;
				}
			}
}
.panel {
	height: 41px;
	width: 100%;
	font-size: 13px;
	background: #fff;
	z-index: 4;
	position: relative;
	border-bottom: 1px solid #000;
	padding: 0 20px 0 16px;
	box-sizing: border-box;

	.left {
		float: left;
	}
	.right {
		float: right;

		input {
			border: 1px solid #000;
			font-size: 13px;
			padding: 5px 5px;
			margin: 7px 0;
			vertical-align: top;
		}
	}

	button {
		background: #fff;
		border: 0;
		padding: 0 15px;
		line-height: 40px;
	}
}

#tasks {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	height: 100%;
	z-index: 1;
	box-sizing: border-box;
	background-image: #ffffff;
	background-image: -webkit-radial-gradient(50% 50%, ellipse closest-side, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.0) 100%);
		
	.content {
		overflow-y: auto;
		
		
		h2 {
			text-align: center;
			font-size: 20px;
		}
		
		ul {
			padding: 0 20px 40px 16px;
			margin: 0;
		
			li {
				display: block;
				min-height: 30px;
				height: 30px;
				margin-top: -1px;
				cursor: pointer;
				overflow: hidden;
				padding: 0;

				background: #fff;				
				border: 1px solid #000;
						
				font-size: 13px;
				line-height: 30px;
				color: #111;
				-webkit-transform: translateZ(0);
				-webkit-transition-property: margin, height;
 				-webkit-transition-duration: 150ms, 150ms;  
 				-webkit-transition-timing-function: ease, ease;

				&.placeholder {
					background: rgba(0,0,0,0.1);
					box-shadow: 0 0 0 #000;
				}

				.boxhelp {
					display: -webkit-box;
					display: -moz-box;
					display: box;
				}

				.checkbox {
					margin: 8px;
					width: 13px;
					height: 13px;
					border: 1px solid #000;

					&.checked {
						background: #000;
					}
				}

				input {
					border: 0;
					line-height: 1;
					box-shadow: none;
					background: transparent;

					&:focus {
						box-shadow: none;
						outline: 0;
					}
				}

				div[data-bind=content] {
					padding-left: 1px;
					padding-top: 1px;
				}

				input[data-bind=content] {
					padding: 0;
					margin: 0;
					box-sizing: border-box;
					-webkit-box-flex: 1;
					-moz-box-flex: 1;
					box-flex: 1;
					display: block;
				}

				button[data-bind=priority] {
					border: 0;
					border-left: 1px solid #000;
					background: transparent;
					line-height: 31px;
					padding: 0 15px;
				}

				input.date {
					border-left: 1px solid #000;
					padding: 8px 5px;
					vertical-align: top;
					width: 80px;
					text-align: center;
				}	
				
				&:hover {
					background: #fafafa;
				}
				
				&.selected {
					background: #0f0;

					&.expanded {
						background: #fff;
					}
				}

				.hidden {
					display: none;
					
					textarea {
						min-height:  100px;
						max-height: 400px;
						width: 100%;
						border: 0;
						border-top: 1px solid #000;
						box-sizing: border-box;
						padding: 15px;
						resize: none;

						&:focus {
							box-shadow: none;
							outline: 0;
						}
					}
				}
			}
		}
	}
}
.vsplitbar {
	border-right: 4px solid transparent;
	box-sizing: border-box;
	position: absolute;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-webkit-user-select: none;
	width: 5px;
	border-left: 1px solid #000;
	box-shadow: 0 -1px 0 #111, 0 -41px 0 #fff;
	margin-top: 41px;
	height: 100%;
	z-index: 10;
}

//jQuery UI trys to override
.ui-sortable-helper.tasks {
	display: inline !important;
	font-size: 13px;
	font-weight: bold;
	color: #fff;
	background: #85B1F8 !important;
	line-height: 30p !importantx;
	height: auto !important;
	min-height: 0 !important;
	padding: 3px 10px;
	cursor: default;
}

